# DINPRO

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DINPRO_CONTEXT.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
docs/: 00_MANIFIESTO.md  01_VISION.md  02_ARQUITECTURA.md  03_ESTANDARES.md  04_REGLAS_IA.md  05_ROADMAP.md  06_CORE_IMPLEMENTATION.md  07_CAD_ABSTRACTION_LAYER.md  08_AUDITORIA_TECNICA.md  09_DECISION_LOG.md  10_GSE_SPEC.md  11_CAPABILITY_MATRIX.md  11_LRE_SPEC.md  DOMAIN_GLOSSARY.md
docs/03_ARQUITECTURA/: README.md
docs/adr/: ADR-0001-plugin-architecture.md  ADR-0002-domain-model.md  ADR-0003-cad-abstraction.md  ADR-0004-geometry-engine.md  ADR-0005-dot-format.md  ADR-0006-three-layer-architecture.md  ADR-0007-quality-process.md  ADR-0008-versioning-and-lts.md
specs/: README.md
specs/EPIC-001/: ADR.md  API.md  ARCHITECT_NOTES.md  BENCHMARK.md  CHANGELOG.md  PUBLIC_API.md  RFC.md  SPEC.md  Sprint-4.5-LinearEvents.md  Sprint-4.6-RouteCalibration.md  TEST_PLAN.md  UML.md
specs/EPIC-002/: API.md  CHANGELOG.md  RFC.md  SPEC.md  TEST_PLAN.md  (+1 more)
tests/: test_application.py  test_axis.py  test_cad_entities.py  test_cad_factory.py  test_cad_selection.py  test_dxf_adapter.py  test_errors.py  test_event_bus.py  test_event_bus_edge.py  test_geometry.py  test_geometry_edge.py  test_logger.py  test_logger_edge.py  test_plugin_manager.py  test_project.py  test_project_cad.py  test_project_edge.py  test_result_manager.py  test_settings.py  test_settings_edge.py  test_version.py
(+107 files in other folders)
