[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinpro"
version = "0.1.0"
description = "Infrastructure Design and Engineering Platform"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = []
test = []
